// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextField component should render correctly when is disabled 1`] = `
Array [
  ".container-0-2-1 {
  flex-grow: 1;
}
.input-0-2-2 {
  width: 100%;
  border: 1px solid;
  padding: 16px;
  font-size: 16px;
  box-sizing: border-box;
  font-family: Roboto, sans-serif;
  border-radius: 4px;
  letter-spacing: 0.51px;
}
.input-0-2-2:disabled {
  background-color: #ffffff;
}
.input-0-2-2:hover:not([disabled]) {
  border-color: #777777;
}
.input-0-2-2:focus {
  border: 2px solid;
  outline: none;
  border-color: #f4ab34;
}
.input-0-2-2::placeholder {}
.overlay-0-2-3 {
  position: relative;
}
.overlay-0-2-3:after {
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  content: ' ';
  position: absolute;
  border-radius: 4px;
  background-color: #bbbbbb;
}
.helperText-0-2-4 {
  display: flex;
  font-size: 12px;
  margin-top: 4px;
  align-items: center;
  font-family: Roboto, sans-serif;
  margin-bottom: 0;
  letter-spacing: 0.4px;
}
.helperText-0-2-4 > i {}
.label-0-2-5 {
  font-size: 14px;
  font-family: Roboto, sans-serif;
  letter-spacing: 0.11px;
}
.input-d0-0-2-6 {
  border-color: #bbbbbb;
  color: #bbbbbb;
  height: 56px;
}
.input-d0-0-2-6::placeholder {
  color: #bbbbbb;
}
.overlay-d1-0-2-7 {}
.overlay-d1-0-2-7:after {
  opacity: 0;
}
.helperText-d2-0-2-8 {
  color: #bbbbbb;
}
.helperText-d2-0-2-8 > i {}
.label-d3-0-2-9 {
  color: #bbbbbb;
}",
  <div>
    <div
      class="container-0-2-1"
    >
      <label
        class="label-0-2-5 label-d3-0-2-9"
      >
        Label
        <div
          class="overlay-0-2-3 overlay-d1-0-2-7"
        >
          <input
            class="input-0-2-2 input-d0-0-2-6"
            data-testid="disabled-input"
            disabled=""
            type="text"
            value=""
          />
        </div>
      </label>
      <p
        class="helperText-0-2-4 helperText-d2-0-2-8"
      />
    </div>
  </div>,
]
`;

exports[`TextField component should render correctly when is readonly 1`] = `
Array [
  ".container-0-2-1 {
  flex-grow: 1;
}
.input-0-2-2 {
  width: 100%;
  border: 1px solid;
  padding: 16px;
  font-size: 16px;
  box-sizing: border-box;
  font-family: Roboto, sans-serif;
  border-radius: 4px;
  letter-spacing: 0.51px;
}
.input-0-2-2:disabled {
  background-color: #ffffff;
}
.input-0-2-2:hover:not([disabled]) {
  border-color: #777777;
}
.input-0-2-2:focus {
  border: 2px solid;
  outline: none;
  border-color: #f4ab34;
}
.input-0-2-2::placeholder {}
.overlay-0-2-3 {
  position: relative;
}
.overlay-0-2-3:after {
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  content: ' ';
  position: absolute;
  border-radius: 4px;
  background-color: #bbbbbb;
}
.helperText-0-2-4 {
  display: flex;
  font-size: 12px;
  margin-top: 4px;
  align-items: center;
  font-family: Roboto, sans-serif;
  margin-bottom: 0;
  letter-spacing: 0.4px;
}
.helperText-0-2-4 > i {}
.label-0-2-5 {
  font-size: 14px;
  font-family: Roboto, sans-serif;
  letter-spacing: 0.11px;
}
.input-d0-0-2-6 {
  border-color: #bbbbbb;
  color: #333333;
  height: 56px;
}
.input-d0-0-2-6::placeholder {
  color: #777777;
}
.overlay-d1-0-2-7 {
  cursor: not-allowed;
}
.overlay-d1-0-2-7:after {
  opacity: 0.24;
}
.helperText-d2-0-2-8 {
  color: #777777;
}
.helperText-d2-0-2-8 > i {}
.label-d3-0-2-9 {
  color: #777777;
}",
  <div>
    <div
      class="container-0-2-1"
    >
      <label
        class="label-0-2-5 label-d3-0-2-9"
      >
        Label
        <div
          class="overlay-0-2-3 overlay-d1-0-2-7"
        >
          <input
            class="input-0-2-2 input-d0-0-2-6"
            readonly=""
            type="text"
            value=""
          />
        </div>
      </label>
      <p
        class="helperText-0-2-4 helperText-d2-0-2-8"
      />
    </div>
  </div>,
]
`;

exports[`TextField component should render correctly when required 1`] = `
Array [
  ".container-0-2-1 {
  flex-grow: 1;
}
.input-0-2-2 {
  width: 100%;
  border: 1px solid;
  padding: 16px;
  font-size: 16px;
  box-sizing: border-box;
  font-family: Roboto, sans-serif;
  border-radius: 4px;
  letter-spacing: 0.51px;
}
.input-0-2-2:disabled {
  background-color: #ffffff;
}
.input-0-2-2:hover:not([disabled]) {
  border-color: #777777;
}
.input-0-2-2:focus {
  border: 2px solid;
  outline: none;
  border-color: #f4ab34;
}
.input-0-2-2::placeholder {}
.overlay-0-2-3 {
  position: relative;
}
.overlay-0-2-3:after {
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  content: ' ';
  position: absolute;
  border-radius: 4px;
  background-color: #bbbbbb;
}
.helperText-0-2-4 {
  display: flex;
  font-size: 12px;
  margin-top: 4px;
  align-items: center;
  font-family: Roboto, sans-serif;
  margin-bottom: 0;
  letter-spacing: 0.4px;
}
.helperText-0-2-4 > i {}
.label-0-2-5 {
  font-size: 14px;
  font-family: Roboto, sans-serif;
  letter-spacing: 0.11px;
}
.input-d0-0-2-6 {
  border-color: #bbbbbb;
  color: #333333;
  height: 56px;
}
.input-d0-0-2-6::placeholder {
  color: #777777;
}
.overlay-d1-0-2-7 {}
.overlay-d1-0-2-7:after {
  opacity: 0;
}
.helperText-d2-0-2-8 {
  color: #777777;
}
.helperText-d2-0-2-8 > i {}
.label-d3-0-2-9 {
  color: #777777;
}",
  <div>
    <div
      class="container-0-2-1"
    >
      <label
        class="label-0-2-5 label-d3-0-2-9"
      >
        Label
        *
        <div
          class="overlay-0-2-3 overlay-d1-0-2-7"
        >
          <input
            class="input-0-2-2 input-d0-0-2-6"
            data-testid="input"
            required=""
            type="text"
            value=""
          />
        </div>
      </label>
      <p
        class="helperText-0-2-4 helperText-d2-0-2-8"
      />
    </div>
  </div>,
]
`;

exports[`TextField component should render correctly with default props 1`] = `
Array [
  ".container-0-2-1 {
  flex-grow: 1;
}
.input-0-2-2 {
  width: 100%;
  border: 1px solid;
  padding: 16px;
  font-size: 16px;
  box-sizing: border-box;
  font-family: Roboto, sans-serif;
  border-radius: 4px;
  letter-spacing: 0.51px;
}
.input-0-2-2:disabled {
  background-color: #ffffff;
}
.input-0-2-2:hover:not([disabled]) {
  border-color: #777777;
}
.input-0-2-2:focus {
  border: 2px solid;
  outline: none;
  border-color: #f4ab34;
}
.input-0-2-2::placeholder {}
.overlay-0-2-3 {
  position: relative;
}
.overlay-0-2-3:after {
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  content: ' ';
  position: absolute;
  border-radius: 4px;
  background-color: #bbbbbb;
}
.helperText-0-2-4 {
  display: flex;
  font-size: 12px;
  margin-top: 4px;
  align-items: center;
  font-family: Roboto, sans-serif;
  margin-bottom: 0;
  letter-spacing: 0.4px;
}
.helperText-0-2-4 > i {}
.label-0-2-5 {
  font-size: 14px;
  font-family: Roboto, sans-serif;
  letter-spacing: 0.11px;
}
.input-d0-0-2-6 {
  border-color: #bbbbbb;
  color: #333333;
  height: 56px;
}
.input-d0-0-2-6::placeholder {
  color: #777777;
}
.overlay-d1-0-2-7 {}
.overlay-d1-0-2-7:after {
  opacity: 0;
}
.helperText-d2-0-2-8 {
  color: #777777;
}
.helperText-d2-0-2-8 > i {}
.label-d3-0-2-9 {
  color: #777777;
}",
  <div>
    <div
      class="container-0-2-1"
    >
      <label
        class="label-0-2-5 label-d3-0-2-9"
      >
        Label
        <div
          class="overlay-0-2-3 overlay-d1-0-2-7"
        >
          <input
            class="input-0-2-2 input-d0-0-2-6"
            data-testid="default-text-field"
            type="text"
            value=""
          />
        </div>
      </label>
      <p
        class="helperText-0-2-4 helperText-d2-0-2-8"
      />
    </div>
  </div>,
]
`;

exports[`TextField component should render correctly with feedback error 1`] = `
Array [
  ".icon-0-2-10 {
  font-family: natds-icons;
  user-select: none;
}
.icon-d0-0-2-11 {
  color: #e74627;
  font-size: 16px;
}
.container-0-2-1 {
  flex-grow: 1;
}
.input-0-2-2 {
  width: 100%;
  border: 1px solid;
  padding: 16px;
  font-size: 16px;
  box-sizing: border-box;
  font-family: Roboto, sans-serif;
  border-radius: 4px;
  letter-spacing: 0.51px;
}
.input-0-2-2:disabled {
  background-color: #ffffff;
}
.input-0-2-2:hover:not([disabled]) {
  border-color: #777777;
}
.input-0-2-2:focus {
  border: 2px solid;
  outline: none;
  border-color: #f4ab34;
}
.input-0-2-2::placeholder {}
.overlay-0-2-3 {
  position: relative;
}
.overlay-0-2-3:after {
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  content: ' ';
  position: absolute;
  border-radius: 4px;
  background-color: #bbbbbb;
}
.helperText-0-2-4 {
  display: flex;
  font-size: 12px;
  margin-top: 4px;
  align-items: center;
  font-family: Roboto, sans-serif;
  margin-bottom: 0;
  letter-spacing: 0.4px;
}
.helperText-0-2-4 > i {}
.label-0-2-5 {
  font-size: 14px;
  font-family: Roboto, sans-serif;
  letter-spacing: 0.11px;
}
.input-d0-0-2-6 {
  border-color: #e74627;
  color: #333333;
  height: 56px;
}
.input-d0-0-2-6::placeholder {
  color: #777777;
}
.overlay-d1-0-2-7 {}
.overlay-d1-0-2-7:after {
  opacity: 0;
}
.helperText-d2-0-2-8 {
  color: #e74627;
}
.helperText-d2-0-2-8 > i {
  margin-right: 4px;
}
.label-d3-0-2-9 {
  color: #e74627;
}",
  <div>
    <div
      class="container-0-2-1"
    >
      <label
        class="label-0-2-5 label-d3-0-2-9"
      >
        Label
        <div
          class="overlay-0-2-3 overlay-d1-0-2-7"
        >
          <input
            class="input-0-2-2 input-d0-0-2-6"
            type="text"
            value=""
          />
        </div>
      </label>
      <p
        class="helperText-0-2-4 helperText-d2-0-2-8"
      >
        <i
          aria-hidden="true"
          class="icon-0-2-10 icon-d0-0-2-11 natds-icons natds-icons-outlined-action-cancel"
          data-testid="icon-outlined-action-cancel"
          role="img"
        />
      </p>
    </div>
  </div>,
]
`;

exports[`TextField component should render correctly with feedback success 1`] = `
Array [
  ".icon-0-2-10 {
  font-family: natds-icons;
  user-select: none;
}
.icon-d0-0-2-11 {
  color: #569a32;
  font-size: 16px;
}
.container-0-2-1 {
  flex-grow: 1;
}
.input-0-2-2 {
  width: 100%;
  border: 1px solid;
  padding: 16px;
  font-size: 16px;
  box-sizing: border-box;
  font-family: Roboto, sans-serif;
  border-radius: 4px;
  letter-spacing: 0.51px;
}
.input-0-2-2:disabled {
  background-color: #ffffff;
}
.input-0-2-2:hover:not([disabled]) {
  border-color: #777777;
}
.input-0-2-2:focus {
  border: 2px solid;
  outline: none;
  border-color: #f4ab34;
}
.input-0-2-2::placeholder {}
.overlay-0-2-3 {
  position: relative;
}
.overlay-0-2-3:after {
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  content: ' ';
  position: absolute;
  border-radius: 4px;
  background-color: #bbbbbb;
}
.helperText-0-2-4 {
  display: flex;
  font-size: 12px;
  margin-top: 4px;
  align-items: center;
  font-family: Roboto, sans-serif;
  margin-bottom: 0;
  letter-spacing: 0.4px;
}
.helperText-0-2-4 > i {}
.label-0-2-5 {
  font-size: 14px;
  font-family: Roboto, sans-serif;
  letter-spacing: 0.11px;
}
.input-d0-0-2-6 {
  border-color: #569a32;
  color: #333333;
  height: 56px;
}
.input-d0-0-2-6::placeholder {
  color: #777777;
}
.overlay-d1-0-2-7 {}
.overlay-d1-0-2-7:after {
  opacity: 0;
}
.helperText-d2-0-2-8 {
  color: #569a32;
}
.helperText-d2-0-2-8 > i {
  margin-right: 4px;
}
.label-d3-0-2-9 {
  color: #569a32;
}",
  <div>
    <div
      class="container-0-2-1"
    >
      <label
        class="label-0-2-5 label-d3-0-2-9"
      >
        Label
        <div
          class="overlay-0-2-3 overlay-d1-0-2-7"
        >
          <input
            class="input-0-2-2 input-d0-0-2-6"
            type="text"
            value=""
          />
        </div>
      </label>
      <p
        class="helperText-0-2-4 helperText-d2-0-2-8"
      >
        <i
          aria-hidden="true"
          class="icon-0-2-10 icon-d0-0-2-11 natds-icons natds-icons-outlined-action-check"
          data-testid="icon-outlined-action-check"
          role="img"
        />
      </p>
    </div>
  </div>,
]
`;

exports[`TextField component should render correctly with helper text 1`] = `
Array [
  ".container-0-2-1 {
  flex-grow: 1;
}
.input-0-2-2 {
  width: 100%;
  border: 1px solid;
  padding: 16px;
  font-size: 16px;
  box-sizing: border-box;
  font-family: Roboto, sans-serif;
  border-radius: 4px;
  letter-spacing: 0.51px;
}
.input-0-2-2:disabled {
  background-color: #ffffff;
}
.input-0-2-2:hover:not([disabled]) {
  border-color: #777777;
}
.input-0-2-2:focus {
  border: 2px solid;
  outline: none;
  border-color: #f4ab34;
}
.input-0-2-2::placeholder {}
.overlay-0-2-3 {
  position: relative;
}
.overlay-0-2-3:after {
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  content: ' ';
  position: absolute;
  border-radius: 4px;
  background-color: #bbbbbb;
}
.helperText-0-2-4 {
  display: flex;
  font-size: 12px;
  margin-top: 4px;
  align-items: center;
  font-family: Roboto, sans-serif;
  margin-bottom: 0;
  letter-spacing: 0.4px;
}
.helperText-0-2-4 > i {}
.label-0-2-5 {
  font-size: 14px;
  font-family: Roboto, sans-serif;
  letter-spacing: 0.11px;
}
.input-d0-0-2-6 {
  border-color: #bbbbbb;
  color: #333333;
  height: 56px;
}
.input-d0-0-2-6::placeholder {
  color: #777777;
}
.overlay-d1-0-2-7 {}
.overlay-d1-0-2-7:after {
  opacity: 0;
}
.helperText-d2-0-2-8 {
  color: #777777;
}
.helperText-d2-0-2-8 > i {}
.label-d3-0-2-9 {
  color: #777777;
}",
  <div>
    <div
      class="container-0-2-1"
    >
      <label
        class="label-0-2-5 label-d3-0-2-9"
      >
        Label
        <div
          class="overlay-0-2-3 overlay-d1-0-2-7"
        >
          <input
            class="input-0-2-2 input-d0-0-2-6"
            type="text"
            value=""
          />
        </div>
      </label>
      <p
        class="helperText-0-2-4 helperText-d2-0-2-8"
      >
        helper text
      </p>
    </div>
  </div>,
]
`;

exports[`TextField component should render correctly with medium size 1`] = `
Array [
  ".container-0-2-1 {
  flex-grow: 1;
}
.input-0-2-2 {
  width: 100%;
  border: 1px solid;
  padding: 16px;
  font-size: 16px;
  box-sizing: border-box;
  font-family: Roboto, sans-serif;
  border-radius: 4px;
  letter-spacing: 0.51px;
}
.input-0-2-2:disabled {
  background-color: #ffffff;
}
.input-0-2-2:hover:not([disabled]) {
  border-color: #777777;
}
.input-0-2-2:focus {
  border: 2px solid;
  outline: none;
  border-color: #f4ab34;
}
.input-0-2-2::placeholder {}
.overlay-0-2-3 {
  position: relative;
}
.overlay-0-2-3:after {
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  content: ' ';
  position: absolute;
  border-radius: 4px;
  background-color: #bbbbbb;
}
.helperText-0-2-4 {
  display: flex;
  font-size: 12px;
  margin-top: 4px;
  align-items: center;
  font-family: Roboto, sans-serif;
  margin-bottom: 0;
  letter-spacing: 0.4px;
}
.helperText-0-2-4 > i {}
.label-0-2-5 {
  font-size: 14px;
  font-family: Roboto, sans-serif;
  letter-spacing: 0.11px;
}
.input-d0-0-2-6 {
  border-color: #bbbbbb;
  color: #333333;
  height: 48px;
}
.input-d0-0-2-6::placeholder {
  color: #777777;
}
.overlay-d1-0-2-7 {}
.overlay-d1-0-2-7:after {
  opacity: 0;
}
.helperText-d2-0-2-8 {
  color: #777777;
}
.helperText-d2-0-2-8 > i {}
.label-d3-0-2-9 {
  color: #777777;
}",
  <div>
    <div
      class="container-0-2-1"
    >
      <label
        class="label-0-2-5 label-d3-0-2-9"
      >
        Label
        <div
          class="overlay-0-2-3 overlay-d1-0-2-7"
        >
          <input
            class="input-0-2-2 input-d0-0-2-6"
            type="text"
            value=""
          />
        </div>
      </label>
      <p
        class="helperText-0-2-4 helperText-d2-0-2-8"
      />
    </div>
  </div>,
]
`;
